--- a/TiendaTutorplus/pom.xml
+++ b/TiendaTutorplus/pom.xml
@@ -68,6 +68,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        
+        <!-- JPA / Hibernate -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        
+        <!-- Conector MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
