--- a/TiendaTutorplus/src/main/resources/application.properties
+++ b/TiendaTutorplus/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.thymeleaf.cache=false
 server.port=8080
+
+logging.pattern.dateformat=hh:mm
+
+spring.main.banner-mode=off
+
+#MySql conexion
+spring.datasource.url=jdbc:mysql://localhost:3306/tutorplus?serverTimezone=America/Costa_Rica
+spring.datasource.username=usuario_tutor
+spring.datasource.password=Clave_Tutor123.
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
